--- a/src/listagem.css
+++ b/src/listagem.css
@@ -1,9 +1,3 @@
-.table-action {
-  max-width: 900px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .table-action img {
   width: 200px;
   height: 120px;
@@ -23,6 +17,9 @@
   .table-action td:not(:first-child) {
     display: block;
     height: 25px;
+  }
+  .table-action td:last-child {
+    height: 42px;
   }
   .table-action td:nth-child(2)::before {
     content: 'Modelo: ';
